fixed bug on iphone4

--- a/assets/sass/componentes/_formularios.scss
+++ b/assets/sass/componentes/_formularios.scss
@@ -140,7 +140,8 @@ input[type="file"] {
 	height : 35px;
 	*margin-top : 4px;
 	line-height : 1;
-	@include max-width($bp3);
+	@include max-width(190px);
+	min-width: 160px;
 }
 
 select {
