--- a/assets/sass/componentes/_navegacion.scss
+++ b/assets/sass/componentes/_navegacion.scss
@@ -75,23 +75,24 @@ Main navbar
 
         z-index: 4;
         @include flexbox;
+        @include flex-direction(column);
+        @include justify-content(center);
+        @include flex-wrap(wrap);
+        @include align-items(center);
+        @include align-content(stretch);
+        background-color: $black-alpha;
+        text-align: center;
+        top: 50px;
 
     }
 
     > ul {
-
         position: fixed;
-        top: 0;
-        align-items: center;
-        @include justify-content(center);
-        @include flex-wrap(wrap);
-        @include flex-direction(column);
-        height: 100vh;
-        width: 100%;
+        top: -1000px;
+        right: 0;
+        // width: 100%;
         margin: 0;
         padding: 0;
-        background-color: $black-alpha;
-        text-align: center;
         display: none;
 
     }
