--- a/style.css
+++ b/style.css
@@ -1297,8 +1297,8 @@ Main navbar
 .nav-main label { margin-bottom: 0; }
 .nav-main label::after { width: 2em; position: fixed; top: 10px; right: 10px; display: block; font-size: 22px; font-size: 1.1rem; line-height: 2.1; content: "☰"; z-index: 25; text-align: center; background-color: #f0730b; border-radius: 100%; color: white; }
 @media screen and (min-width: 930px) { .nav-main label::after { display: none; } }
-.nav-main input[type="checkbox"]:checked ~ ul { z-index: 4; display: -moz-flex; display: -moz-box; /* OLD - Firefox 19 */ display: -ms-flexbox; /* TWEENER - IE 10 */ display: -webkit-flex; /* NEW - Chrome */ display: -webkit-box; /* OLD - iOS 6-, Safari 3.1-6 */ display: flex; /* NEW, Spec - Opera 12.1, Firefox 20+ */ }
-.nav-main > ul { position: fixed; top: 0; align-items: center; -webkit-box-pack: center; -ms-flex-pack: center; -webkit-justify-content: center; -moz-justify-content: center; justify-content: center; -webkit-flex-wrap: wrap; -moz-flex-wrap: wrap; -ms-flex-wrap: wrap; flex-wrap: wrap; -webkit-box-direction: normal; -webkit-box-orient: vertical; -webkit-flex-direction: column; -moz-flex-direction: column; -ms-flex-direction: column; flex-direction: column; height: 100vh; width: 100%; margin: 0; padding: 0; background-color: rgba(0, 0, 0, 0.7); text-align: center; display: none; }
+.nav-main input[type="checkbox"]:checked ~ ul { z-index: 4; display: -moz-flex; display: -moz-box; /* OLD - Firefox 19 */ display: -ms-flexbox; /* TWEENER - IE 10 */ display: -webkit-flex; /* NEW - Chrome */ display: -webkit-box; /* OLD - iOS 6-, Safari 3.1-6 */ display: flex; /* NEW, Spec - Opera 12.1, Firefox 20+ */ -webkit-box-direction: normal; -webkit-box-orient: vertical; -webkit-flex-direction: column; -moz-flex-direction: column; -ms-flex-direction: column; flex-direction: column; -webkit-box-pack: center; -ms-flex-pack: center; -webkit-justify-content: center; -moz-justify-content: center; justify-content: center; -webkit-flex-wrap: wrap; -moz-flex-wrap: wrap; -ms-flex-wrap: wrap; flex-wrap: wrap; -webkit-box-align: center; -ms-flex-align: center; -webkit-align-items: center; -moz-align-items: center; align-items: center; -webkit-align-content: stretch; -moz-align-content: stretch; -ms-flex-line-pack: stretch; align-content: stretch; background-color: rgba(0, 0, 0, 0.7); text-align: center; top: 50px; }
+.nav-main > ul { position: fixed; top: -1000px; right: 0; margin: 0; padding: 0; display: none; }
 .nav-main input[type="checkbox"] { display: none; }
 .nav-main input[type="checkbox"]:checked + label::after { content: "X"; }
 
@@ -1432,7 +1432,7 @@ input[type="file"] { width: auto; padding: initial; line-height: initial; border
 
 input[type="button"], input[type="reset"], input[type="submit"] { width: auto; height: auto; cursor: pointer; *overflow: visible; }
 
-select, input[type="file"] { height: 35px; *margin-top: 4px; line-height: 1; margin-left: auto; margin-right: auto; max-width: 600px; width: 100%; }
+select, input[type="file"] { height: 35px; *margin-top: 4px; line-height: 1; margin-left: auto; margin-right: auto; max-width: 190px; width: 100%; min-width: 160px; }
 
 select { background-color: rgba(0, 0, 0, 0.1); }
 
